akwnrfpui efaoue arf
knpiun cpiauwnf

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Shashwath Bhaskar</title>
-  <link rel="stylesheet" href="CSS/styles.css">
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
     rel="stylesheet">
   <style>
     body {
-      background-image: url('images/bg.jpg');
+      background-image: url('bg.jpg');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: 100% 100%;
