qpaijwpr fpqe rgpfijewr
'po[n pwij fpwie

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <div class="dp_div">
-    <img src="images/pp.png" alt="profile-picture" style="height:370px; width: 280px" class="dp">
+    <img src="pp.png" alt="profile-picture" style="height:370px; width: 280px" class="dp">
   </div>
   <div class="cm">
     <h4>Contact me</h4>
